Prevent long URLs in quotes and bodies causing overflow (#3546)
Set a maximum width on the annotation content to prevent it overflowing
the card and set `overflow-wrap` on annotation quotes and bodies so that
long words without any natural breakpoints are broken in the middle if
necessary to prevent overflow.

Fixes #3421

--- a/h/static/styles/markdown.scss
+++ b/h/static/styles/markdown.scss
@@ -46,6 +46,9 @@
 
   cursor: text;
 
+  // Prevent long URLs etc. in body causing overflow
+  overflow-wrap: break-word;
+
   // Margin between bottom of ascent of username and top of
   // x-height of annotation-body should be ~15px.
   // Remove additional margin-top added by the first p within
